# routes/api.php
@@ -1,0 +1,25 @@
+<?php
+
+use App\Http\Controllers\Api\ShipmentController;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Route;
+
+/*
+|--------------------------------------------------------------------------
+| API Routes
+|--------------------------------------------------------------------------
+|
+| Here is where you can register API routes for your application. These
+| routes are loaded by the RouteServiceProvider and all of them will
+| be assigned to the "api" middleware group. Make something great!
+|
+*/
+
+Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
+    return $request->user();
+});
+
+// Shipment API Routes
+Route::middleware('auth:sanctum')->group(function () {
+    Route::apiResource('shipments', ShipmentController::class);
+});
